--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -52,7 +52,7 @@
                         <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                     </div>
                     <div class="card-text">
-                        <a class="btn btn-success" href="#">Add to cart</a>
+                        <a class="btn btn-success" href="/cart/add/id" th:attr="href='/cart/add/' + ${prod.id}">Add to cart</a>
                     </div>
                 </div>
             </div>
