--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -60,3 +60,15 @@
 {
     margin: 0 0 11px;
 }
+
+.badge:after{
+    content:attr(value);
+    font-size:12px;
+    background: deepskyblue;
+    border-radius:50%;
+    padding:3px;
+    position:relative;
+    left:-8px;
+    top:-10px;
+    opacity:0.9;
+}
