Create navbar.html from Bootstrap

--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -33,13 +33,7 @@
 
 <body>
 
-<div class="jumbotron text-center">
-    <h1>Codecool Shop</h1>
-</div>
-
-<div class="card">
-    <a id="cart-badge" class="fa badge" style="font-size:24px" value=0 href="/cart">&#xf07a;</a>
-</div>
+<div th:replace="navbar.html :: copy"></div>
 
 <div class="container">
     <div class="card">
