minor cart.html refactor

--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -31,20 +31,18 @@
 <body>
 
 <div class="jumbotron text-center">
-    <h1>Codecool Shop</h1>
+    <h1 href="/">Codecool Shop</h1>
 </div>
 
 <div class="container">
-    <div class="card">
-    </div>
-
     <div id="products" class="row">
+        <h4>Your basket:</h4><br>
         <div class="col col-sm-12 col-md-6 col-lg-4" th:each="cartitem,iterStat : ${cartItems}">
             <div class="card">
                 <img class="" src="http://placehold.it/400x250/000/fff" th:attr="src='/static/img/product_' + ${cartitem.getProduct().getId()} + '.jpg'" alt="" />
                 <div class="card-header">
                     <h4 class="card-title" th:text="${cartitem.getProduct().getName()}">Product name</h4>
-                    <h4 class="card-title" th:text="${cartitem.getQuantity()}">Product name</h4>
+                    <h4 class="card-title" th:text="${cartitem.getQuantity()}">Product quantity</h4>
                 </div>
                 <div class="card-body">
 
