--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -35,6 +35,7 @@
 <div class="container">
     <div id="products" class="row">
         <h4>Your basket:</h4><br>
+
         <div class="col col-sm-12 col-md-6 col-lg-4" th:each="cartitem,iterStat : ${cartItems}">
             <div class="card">
                 <img class="" src="http://placehold.it/400x250/000/fff" th:attr="src='/static/img/product_' + ${cartitem.getProduct().getId()} + '.jpg'" alt="" />
@@ -43,9 +44,11 @@
                 </div>
                 <div class="card-body">
                     <h4 class="card-title" th:text="${cartitem.getQuantity()}">Product quantity</h4>
+                    <h4 class="card-title" th:text="${cartitem.getSubTotalPrice()}">Subtotal</h4>
                 </div>
             </div>
         </div>
+        <h4 class="card-title" th:text="${totalPrice}">total price</h4>
     </div>
 
 </div>
