--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -33,9 +33,8 @@
 <div th:replace="navbar.html :: copy"></div>
 
 <div class="container">
+    <h4>Your basket:</h4><br>
     <div id="products" class="row">
-        <h4>Your basket:</h4><br>
-
         <div class="col col-sm-12 col-md-6 col-lg-4" th:each="cartitem,iterStat : ${cartItems}">
             <div class="card">
                 <img class="" src="http://placehold.it/400x250/000/fff" th:attr="src='/static/img/product_' + ${cartitem.getProduct().getId()} + '.jpg'" alt="" />
@@ -48,9 +47,11 @@
                 </div>
             </div>
         </div>
-        <h4 class="card-title" th:text="${totalPrice}">total price</h4>
+    </div><br>
+    <div class="card">
+        <div class="card-title">Total Price</div>
+    <h4 th:text="${totalPrice}">total price</h4>
     </div>
-
 </div>
 
 <div th:replace="footer.html :: copy"></div>
