--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -1,33 +1,6 @@
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8" />
-    <meta name="author" content="Codecool" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-
-    <title>Codecool Shop</title>
-
-    <!-- Bootstrap components -->
-    <!-- Latest compiled and minified Jquery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-
-    <!--Latest compiled and minified Popper -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-
-    <!-- Latest compiled and minified CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <!-- End of Bootstrap components -->
-
-    <link rel="stylesheet" type="text/css" href="/static/css/custom.css" />
-</head>
-
+<head th:replace="header.html :: head"></head>
 <body>
 
 <div th:replace="navbar.html :: copy"></div>
@@ -36,21 +9,22 @@
     <h4>Your basket:</h4><br>
     <div id="products" class="row">
         <div class="col col-sm-12 col-md-6 col-lg-4" th:each="cartitem,iterStat : ${cartItems}">
-            <div class="card">
+            <div class="card" id="" th:attr="id='product-'+${cartitem.getProduct().getId()}">
                 <img class="" src="http://placehold.it/400x250/000/fff" th:attr="src='/static/img/product_' + ${cartitem.getProduct().getId()} + '.jpg'" alt="" />
                 <div class="card-header">
                     <h4 class="card-title" th:text="${cartitem.getProduct().getName()}">Product name</h4>
                 </div>
                 <div class="card-body">
-                    <h4 class="card-title" th:text="${cartitem.getQuantity()}">Product quantity</h4>
-                    <h4 class="card-title" th:text="${cartitem.getSubTotalPrice()}">Subtotal</h4>
+                    <h4 class="card-title" id="lel" th:text="${cartitem.getQuantity()}" th:attr="id='product-q-'+${cartitem.getProduct().getId()}">Product quantity</h4>
+                    <a class="btn btn-success"   href='javascript:void();' onclick="" th:onclick="'modifyCart(\'remove\',\'' + ${cartitem.getProduct().getId()} + '\');'">Remove from cart</a>
+                    <h4 class="card-title" th:text="${cartitem.getSubTotalPrice()}" id=" " th:attr="id='product-sub-'+${cartitem.getProduct().getId()}">Subtotal</h4>
                 </div>
             </div>
         </div>
     </div><br>
     <div class="card">
         <div class="card-title">Total Price</div>
-    <h4 th:text="${totalPrice}">total price</h4>
+        <h4 th:text="${totalPrice}" id="total-price">total price</h4>
     </div>
 </div>
 
