--- a/src/main/webapp/templates/footer.html
+++ b/src/main/webapp/templates/footer.html
@@ -3,11 +3,11 @@
 <body>
 
 <div th:fragment="copy">
-    <div class="card">
+
         <div class="card-body">
-            &copy; 2019 Codecool Budapest
+            &copy; 2020 Codecool Budapest // team Programmers implements Codecool
         </div>
-    </div>
+
 </div>
 
 </body>
