--- a/src/main/webapp/templates/cart/cart.html
+++ b/src/main/webapp/templates/cart/cart.html
@@ -28,7 +28,7 @@
                         <h6 class="lead" style="display: inline">USD</h6>
                     </div>
                     <br>
-                    <a class="btn btn-success" href='javascript:void();' onclick=""
+                    <a class="btn btn-success" href='javascript:void(0)' onclick=""
                        th:onclick="'modifyCart(\'remove\',\'' + ${cartitem.getProduct().getId()} + '\');'">Remove from
                         cart</a>
                 </div>
