--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -25,7 +25,7 @@
                         <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                     </div>
                     <div class="card-text">
-                        <a class="btn btn-success"   href='javascript:void();' onclick="" th:onclick="'modifyCart(\'add\',\'' + ${prod.id} + '\');'">Add to cart</a>
+                        <a class="btn btn-success"   href='javascript:void(0)' onclick="" th:onclick="'modifyCart(\'add\',\'' + ${prod.id} + '\');'">Add to cart</a>
                     </div>
                 </div>
             </div>
